# ESP-TinyBFT-Power-Consumption-client-logger

./: .gitignore  README.md  pyproject.toml
.opencode/skills/python-standard/: SKILL.md
src/: main.py
src/esp_tinybft_logger/: __init__.py
src/esp_tinybft_logger/analysis/: engine.py  stats.py
src/esp_tinybft_logger/ingest/: parser.py  reader.py
src/esp_tinybft_logger/pipeline/: ntp.py  processor.py  stream.py
src/esp_tinybft_logger/presentation/: cli_printer.py  csv_writer.py
src/esp_tinybft_logger/shared/: config.py  models.py
tests/: conftest.py
tests/analysis/: test_engine.py  test_stats.py
tests/ingest/: test_parser.py  test_reader.py
tests/integration/: test_process_lines.py
tests/pipeline/: test_ntp.py  test_stream.py
tests/presentation/: test_cli_printer.py  test_csv_writer.py
