[project]
name = "esp-tinybft-power-consumption-client-logger"
version = "0.1.0"
description = "Serial logger client for ESP-TinyBFT counter app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ntplib>=0.4.0",
    "polars>=1.41.2",
    "pydantic>=2.13.4",
    "pyserial>=3.5",
    "rich>=15.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/esp_tinybft_logger"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
    "ty>=0.0.41",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "ANN001",
    "ANN201",
    "SIM115"
]
